codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__collab_spawn_end_shows_effective_profile_model_and_effort.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Spawned Robie [explorer] (profile=subxhigh, gpt-5 high)
  └ Explore the repo
