codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__late_user_message_completion_rebases_suffix_edits_after_restored_pending_steer_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
› edited follow-up

                                                             100% context left
