codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__logout_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Logout
  Codex will exit after logging out.
  Select an option below.

› 1. Logout all accounts  Remove all stored credentials.
  2. Remove: Work         currently active • email: work@example.com
  3. Remove: Personal     email: personal@example.com

  Press enter to confirm or esc to go back
