codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_gc_second_cycle_clear_omits_unknown_context_left.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1917
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                                               "
